feat(home):Layout complete

--- a/src/sass/modules/_all.scss
+++ b/src/sass/modules/_all.scss
@@ -9,6 +9,8 @@
 @import '../../components/HomePageComponents/ClientsSection/ClientSection.scss';
 @import '../../components/HomePageComponents/ServiceSection/ServiceSection.scss';
 @import '../../components/HomePageComponents/TrainingSection/TrainingSection.scss';
+@import '../../components/HomePageComponents/ContactSection/ContactSection.scss';
+
 
 
 
