--- a/src/components/HomePageComponents/SwipperSection/SwipperSection.scss
+++ b/src/components/HomePageComponents/SwipperSection/SwipperSection.scss
@@ -1,24 +1,24 @@
-.slide-section{
+.slide-section {
   padding: 5%;
-.slide-container{
-  margin-top: 3%;
-   .ant-col{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    margin:2% 0% ;
-
-    h2{
-      margin:0% 10% ;
-    }
-    p{
-      margin:2% 10% ;
+  .slide-container {
+    margin-top: 3%;
+    .ant-col {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      text-align: center;
+      margin: 2% 0%;
+      img {
+        width: 90%;
+      }
+      h2 {
+        margin: 0% 10%;
+      }
+      p {
+        margin: 2% 10%;
+      }
     }
   }
-
-
-}
 }
