--- a/src/components/HomePageComponents/TrainingSection/TrainingSection.scss
+++ b/src/components/HomePageComponents/TrainingSection/TrainingSection.scss
@@ -1,11 +1,55 @@
-.training-section{
+.training-section {
   width: 100%;
   height: auto;
   background: $secondary-color;
   border-radius: 0 0 40% 0;
-  padding: 10% 5%;
+  padding: 5% 5%;
   font-family: Nunito;
   font-style: normal;
   font-weight: bold;
   color: $white;
+  h2{
+    margin: 0 15%;
+    color: $white;
+    font-weight: 800;
+    font-size: 40px;
+    text-align: center;
+  }
+  p{
+    margin: 3% 0;
+    font-weight: 800;
+    font-size: 35px;
+  }
+  .content-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  img {
+    width: 80%;
+  }
+  .ant-form-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    label {
+      font-weight: 600;
+      font-size: 24px;
+      color: $white;
+      margin-bottom:20px ;
+    }
+    .ant-input{
+      width: 100%;
+      border-radius: 8px;
+    }
+    button{
+      text-align: center;
+      color: $complementary;
+      border-radius: 50px;
+      font-weight: 700;
+      height: 55px;
+      width: 100px;
+      margin: 0 50PX;
+    }
+  }
 }
